--- a/index.html
+++ b/index.html
@@ -5,12 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills</title>
+    <title>Dokument1</title>
 </head>
 
 <body>
-    <h1>rthrth</h1>
-    <p>jvjhhhhhhhhhh222222222hhhhhh</p>
+    <!--Шапка сторінки-->
+    <header>
+        <a href="">WebStudio</a>
+        <nav>
+            <ul>
+                <li>Сдудия</li>
+                <li>Портфолио</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <header>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </header>
+    </header>
+
+
+
+
+
+
+
+
+
+    <footer>
+
+    </footer>
+
 </body>
 
 </html>
