Секції (Особливості і Чим займаємося)

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <a href="">WebStudio</a>
         <nav>
             <ul>
-                <li>Сдудия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
+                <li><a href=""></a> Сдудия</li>
+                <li><a href=""></a> Портфолио</li>
+                <li><a href=""></a> Контакты</li>
             </ul>
         </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -26,7 +26,40 @@
             <button type="button">Заказать услугу</button>
         </header>
     </header>
+    <main>
+        <!--Особенности-->
+        <section>
+            <div>
+                <ul>
+                    <li>Внимание к деталям
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>Пунктуальность <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
+                            собой.</p>
+                    </li>
+                    <li>Планирование <p>Равным образом консультация с широким активом в значительной степени
+                            обуславливает.</p>
+                    </li>
+                    <li>Современные технологии <p>Значимость этих проблем настолько очевидна, что реализация плановых
+                            заданий.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--Чем мы занимаемся-->
+        <section>
+            <div>
+                <h2>Чем мы занимаемся</h2>
+                <img src="/images/box 1 (1).jpg" alt="создания сайта" width="220">
+                <img src="/images/box 2 (1).jpg" alt="делаем дизайн мобильного приложения" width="220">
+                <img src="/images/box 3 (1).jpg" alt="делаем дизайн сайта" width="220">
+            </div>
+        </section>
+        <section>
+            <!--Наша команда-->
+        </section>
 
+    </main>
 
 
 
