--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                 <li><a href=""></a> Контакты</li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
         <header>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
@@ -29,46 +31,60 @@
     <main>
         <!--Особенности-->
         <section>
-            <div>
-                <ul>
-                    <li>Внимание к деталям
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </li>
-                    <li>Пунктуальность <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
-                            собой.</p>
-                    </li>
-                    <li>Планирование <p>Равным образом консультация с широким активом в значительной степени
-                            обуславливает.</p>
-                    </li>
-                    <li>Современные технологии <p>Значимость этих проблем настолько очевидна, что реализация плановых
-                            заданий.</p>
-                    </li>
-                </ul>
-            </div>
+            <ul>
+                <li>Внимание к деталям
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>Пунктуальность <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
+                        собой.</p>
+                </li>
+                <li>Планирование <p>Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
+                </li>
+                <li>Современные технологии <p>Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.</p>
+                </li>
+            </ul>
         </section>
         <!--Чем мы занимаемся-->
         <section>
-            <div>
-                <h2>Чем мы занимаемся</h2>
-                <img src="/images/box 1 (1).jpg" alt="создания сайта" width="220">
-                <img src="/images/box 2 (1).jpg" alt="делаем дизайн мобильного приложения" width="220">
-                <img src="/images/box 3 (1).jpg" alt="делаем дизайн сайта" width="220">
-            </div>
+            <h2>Чем мы занимаемся</h2>
+            <img src="/images/box 1 (1).jpg" alt="создания сайта" width="220">
+            <img src="/images/box 2 (1).jpg" alt="делаем дизайн мобильного приложения" width="220">
+            <img src="/images/box 3 (1).jpg" alt="делаем дизайн сайта" width="220">
         </section>
+        <!--Наша команда-->
         <section>
-            <!--Наша команда-->
+            <h2>Наша команда</h2>
+            <ul>
+                <li> <img src="/images/img (1) (1).jpg" alt="Игорь Демьяненко" width="150">
+                    <p>Игорь Демьяненко</p> <span>Product Designer</span>
+                </li>
+                <li><img src="/images/img (2) (1).jpg" alt="Ольга Репина" width="150">
+                    <p>Ольга Репина</p> <span>Frontend Developer</span>
+                </li>
+                <li><img src="/images/img (3) (1).jpg" alt="Николай Тарасов" width="150">
+                    <p>Николай Тарасов</p> <span>Marketing</span>
+                </li>
+                <li><img src="/images/img (4).jpg" alt="Михаил Ермаков" width="150">
+                    <p>Михаил Ермаков</p> <span>UI Designer</span>
+                </li>
+            </ul>
+
         </section>
-
     </main>
-
-
-
-
-
-
-
-
     <footer>
+        <a href="">WebStudio</a>
+        <ul>
+            <li>
+                <address>г. Киев, пр-т Леси Украинки, 26</address>
+            </li>
+            <li> <a href=""></a>info@example.com</li>
+            <li><a href=""></a>+38 099 111 11 11</li>
+        </ul>
+
+
+
 
     </footer>
 
