--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+    </header>
+    <main>
         <header>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </header>
-    </header>
-    <main>
+
         <!--Особенности-->
         <section>
+            <!--<p>kfkfkf</p>-->
             <ul>
                 <li>Внимание к деталям
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -49,24 +51,24 @@
         <!--Чем мы занимаемся-->
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="/images/box 1 (1).jpg" alt="создания сайта" width="220">
-            <img src="/images/box 2 (1).jpg" alt="делаем дизайн мобильного приложения" width="220">
-            <img src="/images/box 3 (1).jpg" alt="делаем дизайн сайта" width="220">
+            <img src="/images/box1.jpg" alt="создания сайта" width="220">
+            <img src="/images/box2.jpg" alt="делаем дизайн мобильного приложения" width="220">
+            <img src="/images/box3.jpg" alt="делаем дизайн сайта" width="220">
         </section>
         <!--Наша команда-->
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li> <img src="/images/img (1) (1).jpg" alt="Игорь Демьяненко" width="150">
+                <li> <img src="/images/img1.jpg" alt="Игорь Демьяненко" width="150">
                     <p>Игорь Демьяненко</p> <span>Product Designer</span>
                 </li>
-                <li><img src="/images/img (2) (1).jpg" alt="Ольга Репина" width="150">
+                <li><img src="/images/img2.jpg" alt="Ольга Репина" width="150">
                     <p>Ольга Репина</p> <span>Frontend Developer</span>
                 </li>
-                <li><img src="/images/img (3) (1).jpg" alt="Николай Тарасов" width="150">
+                <li><img src="/images/img3.jpg" alt="Николай Тарасов" width="150">
                     <p>Николай Тарасов</p> <span>Marketing</span>
                 </li>
-                <li><img src="/images/img (4).jpg" alt="Михаил Ермаков" width="150">
+                <li><img src="/images/img4.jpg" alt="Михаил Ермаков" width="150">
                     <p>Михаил Ермаков</p> <span>UI Designer</span>
                 </li>
             </ul>
@@ -82,12 +84,7 @@
             <li> <a href=""></a>info@example.com</li>
             <li><a href=""></a>+38 099 111 11 11</li>
         </ul>
-
-
-
-
     </footer>
-
 </body>
 
 </html>
