Фінал на перевірку
Вибивало помилку по section,  вимагало дати назву заголовку. Змінив просто на div

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         </header>
 
         <!--Особенности-->
-        <section>
-            <!--<p>kfkfkf</p>-->
+        <div>
             <ul>
                 <li>Внимание к деталям
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -47,7 +46,7 @@
                         заданий.</p>
                 </li>
             </ul>
-        </section>
+        </div>
         <!--Чем мы занимаемся-->
         <section>
             <h2>Чем мы занимаемся</h2>
