--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -31,44 +31,58 @@
         </header>
 
         <!--Особенности-->
-        <div>
+        <section>
+            <h2>Наши преимущества</h2>
             <ul>
-                <li>Внимание к деталям
+                <li>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>Пунктуальность <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
                         собой.</p>
                 </li>
-                <li>Планирование <p>Равным образом консультация с широким активом в значительной степени
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени
                         обуславливает.</p>
                 </li>
-                <li>Современные технологии <p>Значимость этих проблем настолько очевидна, что реализация плановых
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых
                         заданий.</p>
                 </li>
             </ul>
-        </div>
+        </section>
         <!--Чем мы занимаемся-->
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="/images/box1.jpg" alt="создания сайта" width="220">
-            <img src="/images/box2.jpg" alt="делаем дизайн мобильного приложения" width="220">
-            <img src="/images/box3.jpg" alt="делаем дизайн сайта" width="220">
+            <ul>
+                <li><img src="./images/box1.jpg" alt="создания сайта" width="220"></li>
+                <li><img src="./images/box2.jpg" alt="делаем дизайн мобильного приложения" width="220"></li>
+                <li><img src="./images/box3.jpg" alt="делаем дизайн сайта" width="220"></li>
+            </ul>
         </section>
         <!--Наша команда-->
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li> <img src="/images/img1.jpg" alt="Игорь Демьяненко" width="150">
-                    <p>Игорь Демьяненко</p> <span>Product Designer</span>
+                <li> <img src="./images/img1.jpg" alt="Игорь Демьяненко" width="150">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
                 </li>
-                <li><img src="/images/img2.jpg" alt="Ольга Репина" width="150">
-                    <p>Ольга Репина</p> <span>Frontend Developer</span>
+                <li><img src="./images/img2.jpg" alt="Ольга Репина" width="150">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
                 </li>
-                <li><img src="/images/img3.jpg" alt="Николай Тарасов" width="150">
-                    <p>Николай Тарасов</p> <span>Marketing</span>
+                <li><img src="./images/img3.jpg" alt="Николай Тарасов" width="150">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
-                <li><img src="/images/img4.jpg" alt="Михаил Ермаков" width="150">
-                    <p>Михаил Ермаков</p> <span>UI Designer</span>
+                <li><img src="./images/img4.jpg" alt="Михаил Ермаков" width="150">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
 
@@ -76,13 +90,14 @@
     </main>
     <footer>
         <a href="">WebStudio</a>
-        <ul>
-            <li>
-                <address>г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <li> <a href=""></a>info@example.com</li>
-            <li><a href=""></a>+38 099 111 11 11</li>
-        </ul>
+        <address>
+            <ul>
+                <li> <a href="">г. Киев, пр-т Леси Украинки, 26</a> </li>
+                <li> <a href=""></a>info@example.com</li>
+                <li><a href=""></a>+38 099 111 11 11</li>
+            </ul>
+        </address>
+
     </footer>
 </body>
 
